[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "retico-huggingfacelm"
dynamic = ["version"]
dependencies = [
    "retico-core>=2.0.0",
    "transformers",
    "torch",
    "torchvision",
]
authors = [
    {name = "Anna Manaseryan"},
]
description = "A Retico module for HuggingFace text generation models."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["real-time", "HuggingFace", "text-generation", "LM"]

